// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Confirmation /> icon should render Confirmation icon correctly with default props 1`] = `
<svg
  className="sizeIcon"
  height={40}
  viewBox="0 0 272 272"
  width={40}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Confirmation Icon
  </title>
  <path
    className="sizeIconPath"
    d="M136,0A136,136,0,1,0,272,136,136,136,0,0,0,136,0ZM122.46,211,46,134.54l25.46-25.46L120.38,158l80.36-94.06,27.37,23.38Z"
    fill="currentColor"
  />
</svg>
`;

exports[`Test <Confirmation /> icon should render Confirmation icon correctly with props 1`] = `
<svg
  className="testClassname"
  height={30}
  viewBox="0 0 272 272"
  width={30}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Confirmation Icon
  </title>
  <path
    className="sizeIconPath"
    d="M136,0A136,136,0,1,0,272,136,136,136,0,0,0,136,0ZM122.46,211,46,134.54l25.46-25.46L120.38,158l80.36-94.06,27.37,23.38Z"
    fill="#a4a1a1"
  />
</svg>
`;
